# mcp-sysinfo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/sysinfo/: __init__.py  collectors.py  server.py
